refactor: remove react while redirecting to Keycloak

--- a/templates/usr/share/jitsi-meet/body.html
+++ b/templates/usr/share/jitsi-meet/body.html
@@ -10,6 +10,13 @@ function oidcRedirect() {
   const hash = encodeURIComponent(window.location.hash.substring(1));
 
   window.location = `/oidc/auth?path=${path}&search=${search}&hash=${hash}`;
+
+  try {
+    // remove react from DOM to prevent UI distortion
+    document.all.react.remove();
+  } catch {
+    // do nothing
+  }
 }
 
 function interceptLoginRequest() {
